--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ plugins:
 
 # 3. Gem settings
 paginate: 5 # jekyll-paginate > items per page
-paginate_path: blog/page:num # jekyll-paginate > blog page
+paginate_path: posts/page:num # jekyll-paginate > blog page
 
 author: Tim Beurskens # jekyll-seo-tag > default author
 social: # jekyll-seo-tag > social overrides
@@ -122,8 +122,8 @@ navigation_header:
   url: /
 - title: About
   url: /about/
-- title: Blog
-  url: /blog/
+- title: Projects
+  url: /projects/
 - title: Categories
   url: /categories/
 - title: Search
