--- a/_config.yml
+++ b/_config.yml
@@ -107,14 +107,14 @@ css_inline: false # Will insert all styles into a single <style> block in the <h
 
 # 8. Site favicons & manifest icons
 favicons: # Favicons are also used in the manifest file. Syntax is 'size: path'
-  16: '/assets/logos/logo@16px.png'
-  32: '/assets/logos/logo@32px.png'
-  96: '/assets/logos/logo@96px.png'
-  120: '/assets/logos/logo@120px.png'
-  144: '/assets/logos/logo@144px.png'
-  180: '/assets/logos/logo@180px.png'
-  512: '/assets/logos/logo@512px.png'
-  1024: '/assets/logos/logo@1024px.png'
+  16: '/assets/logos/logo_16.png'
+  32: '/assets/logos/logo_32.png'
+  96: '/assets/logos/logo_96.png'
+  120: '/assets/logos/logo_120.png'
+  144: '/assets/logos/logo_144.png'
+  180: '/assets/logos/logo_180.png'
+  512: '/assets/logos/logo_512.png'
+  1024: '/assets/logos/logo_1024.png'
 
 # 9. Site navigation
 navigation_header:
