--- a/_config.yml
+++ b/_config.yml
@@ -65,7 +65,7 @@ collections:
     title: Posts # Needed for Siteleaf
     output: true
     description: "Stuff I'm working on" # The post list page content
-    feature_image: "https://picsum.photos/2560/600?image=866"
+    feature_image: "https://live.staticflickr.com/65535/49174017521_b4aaf38c12_k_d.jpg"
 
 # 6. Jekyll collections settings
 defaults:
